# mistral-jax

./: .gitignore  pyproject.toml
mistral_jax/: main.py  test_rope.py
