[tool.poetry]
name = "mistral-jax"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.42.3"
jax = "^0.4.30"
torch = "^2.3.1"
einops = "^0.8.0"
flax = "^0.8.5"
sentencepiece = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
